# RAMMB-NEOVIS

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  run.sh  setup.sh
.github/workflows/: release.yml
packaging/: rammb-neovis.desktop.in
scripts/: release.sh
shaders/: tile.frag  tile.vert
src/: animation.cpp  animation.hpp  app.cpp  app.hpp  main.cpp  overlay_defs.hpp  overlay_manager.cpp  overlay_manager.hpp  satellite_config.hpp  scene_file.cpp  scene_file.hpp  stb_impl.cpp  thread_pool.hpp  tile_manager.cpp  tile_manager.hpp
src/export/: exporter.cpp  exporter.hpp
src/network/: http_client.cpp  http_client.hpp
src/renderer/: renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
src/ui/: export_panel.cpp  export_panel.hpp  notifications.hpp  scene_bar.cpp  scene_bar.hpp  sidebar.cpp  sidebar.hpp  timeline.cpp  timeline.hpp  tools_panel.cpp  tools_panel.hpp
